LSP/.antlr/STParser.java
// Generated from /home/sergey/www/VSCODE/vscode-st/LSP/ST.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class STParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, LA=42, ID=43, DT=44, ANY_INT=45, ANY_BIT=46, 
		ANY_STRING=47, ANY_REAL=48, ANY_TIME=49, VAROPEN=50, ARRAY=51, NUMERIC=52, 
		VARKEY=53, LOOP=54, WHITESPACE=55, NEWLINE=56, OPERATOR=57, INTEGER=58, 
		STRING_S=59, STRING_D=60, STRING=61, FLOAT=62, SingleLineComment=63, MultiLineComment=64;
	public static final int
		RULE_compilePOU = 0, RULE_namespaceDeclaration = 1, RULE_programDeclaration = 2, 
		RULE_typeDeclaration = 3, RULE_functionBlockDeclaration = 4, RULE_functionDeclaration = 5, 
		RULE_globalVar = 6, RULE_typeUnit = 7, RULE_typeKindEnum = 8, RULE_enumNameUnit = 9, 
		RULE_enumVal = 10, RULE_typeKindAlias = 11, RULE_typeKindStruct = 12, 
		RULE_varDeclarationList = 13, RULE_varDeclarationSet = 14, RULE_varDeclaration = 15, 
		RULE_statementList = 16, RULE_statement = 17, RULE_statementAssign = 18, 
		RULE_varNameAssign = 19, RULE_statementIf = 20, RULE_statementWhile = 21, 
		RULE_statementRepeat = 22, RULE_statementFor = 23, RULE_statementCase = 24, 
		RULE_caseItemList = 25, RULE_caseItem = 26, RULE_statementListBreak = 27, 
		RULE_expression = 28, RULE_functionParams = 29, RULE_functionParam = 30, 
		RULE_programName = 31, RULE_typeName = 32, RULE_functionName = 33, RULE_functionBlockName = 34, 
		RULE_nsName = 35, RULE_enumName = 36, RULE_varName = 37, RULE_enumValue = 38, 
		RULE_dataType = 39, RULE_dataTypeValue = 40;
	private static String[] makeRuleNames() {
		return new String[] {
			"compilePOU", "namespaceDeclaration", "programDeclaration", "typeDeclaration", 
			"functionBlockDeclaration", "functionDeclaration", "globalVar", "typeUnit", 
			"typeKindEnum", "enumNameUnit", "enumVal", "typeKindAlias", "typeKindStruct", 
			"varDeclarationList", "varDeclarationSet", "varDeclaration", "statementList", 
			"statement", "statementAssign", "varNameAssign", "statementIf", "statementWhile", 
			"statementRepeat", "statementFor", "statementCase", "caseItemList", "caseItem", 
			"statementListBreak", "expression", "functionParams", "functionParam", 
			"programName", "typeName", "functionName", "functionBlockName", "nsName", 
			"enumName", "varName", "enumValue", "dataType", "dataTypeValue"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'NAMESPACE'", "'END_NAMESPACE'", "'PROGRAM'", "'END_PROGRAM'", 
			"'TYPE'", "':'", "'END_TYPE'", "'FUNCTION_BLOCK'", "'END_FUNCTION_BLOCK'", 
			"'FUNCTION'", "'END_FUNCTION'", "'VAR_GLOBAL'", "'END_VAR'", "'('", "','", 
			"')'", "':='", "';'", "'STRUCT'", "'END_STRUCT'", "'AT'", "'.'", "'IF'", 
			"'THEN'", "'END_IF'", "'ELSEIF'", "'ELSE'", "'WHILE'", "'DO'", "'END_WHILE'", 
			"'REPEAT'", "'UNTIL'", "'END_REPEAT'", "'FOR'", "'TO'", "'BY'", "'END_FOR'", 
			"'CASE'", "'OF'", "'END_CASE'", "'=>'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "LA", "ID", "DT", "ANY_INT", "ANY_BIT", 
			"ANY_STRING", "ANY_REAL", "ANY_TIME", "VAROPEN", "ARRAY", "NUMERIC", 
			"VARKEY", "LOOP", "WHITESPACE", "NEWLINE", "OPERATOR", "INTEGER", "STRING_S", 
			"STRING_D", "STRING", "FLOAT", "SingleLineComment", "MultiLineComment"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ST.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public STParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class CompilePOUContext extends ParserRuleContext {
		public NamespaceDeclarationContext namespaceDeclaration() {
			return getRuleContext(NamespaceDeclarationContext.class,0);
		}
		public ProgramDeclarationContext programDeclaration() {
			return getRuleContext(ProgramDeclarationContext.class,0);
		}
		public FunctionDeclarationContext functionDeclaration() {
			return getRuleContext(FunctionDeclarationContext.class,0);
		}
		public FunctionBlockDeclarationContext functionBlockDeclaration() {
			return getRuleContext(FunctionBlockDeclarationContext.class,0);
		}
		public GlobalVarContext globalVar() {
			return getRuleContext(GlobalVarContext.class,0);
		}
		public TypeDeclarationContext typeDeclaration() {
			return getRuleContext(TypeDeclarationContext.class,0);
		}
		public CompilePOUContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compilePOU; }
	}

	public final CompilePOUContext compilePOU() throws RecognitionException {
		CompilePOUContext _localctx = new CompilePOUContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_compilePOU);
		try {
			setState(88);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(82);
				namespaceDeclaration();
				}
				break;
			case T__2:
				enterOuterAlt(_localctx, 2);
				{
				setState(83);
				programDeclaration();
				}
				break;
			case T__9:
				enterOuterAlt(_localctx, 3);
				{
				setState(84);
				functionDeclaration();
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 4);
				{
				setState(85);
				functionBlockDeclaration();
				}
				break;
			case T__11:
				enterOuterAlt(_localctx, 5);
				{
				setState(86);
				globalVar();
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 6);
				{
				setState(87);
				typeDeclaration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NamespaceDeclarationContext extends ParserRuleContext {
		public NsNameContext nsName() {
			return getRuleContext(NsNameContext.class,0);
		}
		public List<CompilePOUContext> compilePOU() {
			return getRuleContexts(CompilePOUContext.class);
		}
		public CompilePOUContext compilePOU(int i) {
			return getRuleContext(CompilePOUContext.class,i);
		}
		public NamespaceDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_namespaceDeclaration; }
	}

	public final NamespaceDeclarationContext namespaceDeclaration() throws RecognitionException {
		NamespaceDeclarationContext _localctx = new NamespaceDeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_namespaceDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			match(T__0);
			setState(91);
			nsName();
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__2) | (1L << T__4) | (1L << T__7) | (1L << T__9) | (1L << T__11))) != 0)) {
				{
				{
				setState(92);
				compilePOU();
				}
				}
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(98);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramDeclarationContext extends ParserRuleContext {
		public ProgramNameContext programName() {
			return getRuleContext(ProgramNameContext.class,0);
		}
		public VarDeclarationListContext varDeclarationList() {
			return getRuleContext(VarDeclarationListContext.class,0);
		}
		public StatementListContext statementList() {
			return getRuleContext(StatementListContext.class,0);
		}
		public ProgramDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programDeclaration; }
	}

	public final ProgramDeclarationContext programDeclaration() throws RecognitionException {
		ProgramDeclarationContext _localctx = new ProgramDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_programDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(T__2);
			setState(101);
			programName();
			setState(102);
			varDeclarationList();
			setState(103);
			statementList();
			setState(104);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeDeclarationContext extends ParserRuleContext {
		public TypeNameContext typeName() {
			return getRuleContext(TypeNameContext.class,0);
		}
		public TypeUnitContext typeUnit() {
			return getRuleContext(TypeUnitContext.class,0);
		}
		public TypeDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeDeclaration; }
	}

	public final TypeDeclarationContext typeDeclaration() throws RecognitionException {
		TypeDeclarationContext _localctx = new TypeDeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_typeDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(T__4);
			setState(107);
			typeName();
			setState(108);
			match(T__5);
			setState(109);
			typeUnit();
			setState(110);
			match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionBlockDeclarationContext extends ParserRuleContext {
		public FunctionBlockNameContext functionBlockName() {
			return getRuleContext(FunctionBlockNameContext.class,0);
		}
		public VarDeclarationListContext varDeclarationList() {
			return getRuleContext(VarDeclarationListContext.class,0);
		}
		public StatementListContext statementList() {
			return getRuleContext(StatementListContext.class,0);
		}
		public FunctionBlockDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionBlockDeclaration; }
	}

	public final FunctionBlockDeclarationContext functionBlockDeclaration() throws RecognitionException {
		FunctionBlockDeclarationContext _localctx = new FunctionBlockDeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_functionBlockDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(T__7);
			setState(113);
			functionBlockName();
			setState(114);
			varDeclarationList();
			setState(115);
			statementList();
			setState(116);
			match(T__8);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionDeclarationContext extends ParserRuleContext {
		public FunctionNameContext functionName() {
			return getRuleContext(FunctionNameContext.class,0);
		}
		public DataTypeContext dataType() {
			return getRuleContext(DataTypeContext.class,0);
		}
		public VarDeclarationListContext varDeclarationList() {
			return getRuleContext(VarDeclarationListContext.class,0);
		}
		public StatementListContext statementList() {
			return getRuleContext(StatementListContext.class,0);
		}
		public FunctionDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDeclaration; }
	}

	public final FunctionDeclarationContext functionDeclaration() throws RecognitionException {
		FunctionDeclarationContext _localctx = new FunctionDeclarationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_functionDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(T__9);
			setState(119);
			functionName();
			setState(120);
			match(T__5);
			setState(121);
			dataType();
			setState(122);
			varDeclarationList();
			setState(123);
			statementList();
			setState(124);
			match(T__10);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GlobalVarContext extends ParserRuleContext {
		public List<TerminalNode> VARKEY() { return getTokens(STParser.VARKEY); }
		public TerminalNode VARKEY(int i) {
			return getToken(STParser.VARKEY, i);
		}
		public List<VarDeclarationContext> varDeclaration() {
			return getRuleContexts(VarDeclarationContext.class);
		}
		public VarDeclarationContext varDeclaration(int i) {
			return getRuleContext(VarDeclarationContext.class,i);
		}
		public GlobalVarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_globalVar; }
	}

	public final GlobalVarContext globalVar() throws RecognitionException {
		GlobalVarContext _localctx = new GlobalVarContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_globalVar);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(T__11);
			setState(130);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==VARKEY) {
				{
				{
				setState(127);
				match(VARKEY);
				}
				}
				setState(132);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(136);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(133);
				varDeclaration();
				}
				}
				setState(138);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(139);
			match(T__12);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeUnitContext extends ParserRuleContext {
		public TypeKindAliasContext typeKindAlias() {
			return getRuleContext(TypeKindAliasContext.class,0);
		}
		public TypeKindEnumContext typeKindEnum() {
			return getRuleContext(TypeKindEnumContext.class,0);
		}
		public TypeKindStructContext typeKindStruct() {
			return getRuleContext(TypeKindStructContext.class,0);
		}
		public TypeUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeUnit; }
	}

	public final TypeUnitContext typeUnit() throws RecognitionException {
		TypeUnitContext _localctx = new TypeUnitContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_typeUnit);
		try {
			setState(144);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
			case DT:
				enterOuterAlt(_localctx, 1);
				{
				setState(141);
				typeKindAlias();
				}
				break;
			case T__13:
				enterOuterAlt(_localctx, 2);
				{
				setState(142);
				typeKindEnum();
				}
				break;
			case T__18:
				enterOuterAlt(_localctx, 3);
				{
				setState(143);
				typeKindStruct();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeKindEnumContext extends ParserRuleContext {
		public List<EnumNameUnitContext> enumNameUnit() {
			return getRuleContexts(EnumNameUnitContext.class);
		}
		public EnumNameUnitContext enumNameUnit(int i) {
			return getRuleContext(EnumNameUnitContext.class,i);
		}
		public EnumValueContext enumValue() {
			return getRuleContext(EnumValueContext.class,0);
		}
		public TypeKindEnumContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeKindEnum; }
	}

	public final TypeKindEnumContext typeKindEnum() throws RecognitionException {
		TypeKindEnumContext _localctx = new TypeKindEnumContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_typeKindEnum);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			match(T__13);
			setState(147);
			enumNameUnit();
			setState(152);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__14) {
				{
				{
				setState(148);
				match(T__14);
				setState(149);
				enumNameUnit();
				}
				}
				setState(154);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(155);
			match(T__15);
			setState(158);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__16) {
				{
				setState(156);
				match(T__16);
				setState(157);
				enumValue();
				}
			}

			setState(160);
			match(T__17);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EnumNameUnitContext extends ParserRuleContext {
		public EnumNameContext enumName() {
			return getRuleContext(EnumNameContext.class,0);
		}
		public EnumValContext enumVal() {
			return getRuleContext(EnumValContext.class,0);
		}
		public EnumNameUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_enumNameUnit; }
	}

	public final EnumNameUnitContext enumNameUnit() throws RecognitionException {
		EnumNameUnitContext _localctx = new EnumNameUnitContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_enumNameUnit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			enumName();
			setState(165);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__16) {
				{
				setState(163);
				match(T__16);
				setState(164);
				enumVal();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EnumValContext extends ParserRuleContext {
		public TerminalNode INTEGER() { return getToken(STParser.INTEGER, 0); }
		public EnumNameContext enumName() {
			return getRuleContext(EnumNameContext.class,0);
		}
		public EnumValContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_enumVal; }
	}

	public final EnumValContext enumVal() throws RecognitionException {
		EnumValContext _localctx = new EnumValContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_enumVal);
		try {
			setState(169);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INTEGER:
				enterOuterAlt(_localctx, 1);
				{
				setState(167);
				match(INTEGER);
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(168);
				enumName();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeKindAliasContext extends ParserRuleContext {
		public DataTypeContext dataType() {
			return getRuleContext(DataTypeContext.class,0);
		}
		public DataTypeValueContext dataTypeValue() {
			return getRuleContext(DataTypeValueContext.class,0);
		}
		public TypeKindAliasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeKindAlias; }
	}

	public final TypeKindAliasContext typeKindAlias() throws RecognitionException {
		TypeKindAliasContext _localctx = new TypeKindAliasContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_typeKindAlias);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(171);
			dataType();
			setState(174);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__16) {
				{
				setState(172);
				match(T__16);
				setState(173);
				dataTypeValue();
				}
			}

			setState(176);
			match(T__17);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeKindStructContext extends ParserRuleContext {
		public List<VarDeclarationContext> varDeclaration() {
			return getRuleContexts(VarDeclarationContext.class);
		}
		public VarDeclarationContext varDeclaration(int i) {
			return getRuleContext(VarDeclarationContext.class,i);
		}
		public TypeKindStructContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeKindStruct; }
	}

	public final TypeKindStructContext typeKindStruct() throws RecognitionException {
		TypeKindStructContext _localctx = new TypeKindStructContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_typeKindStruct);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(178);
			match(T__18);
			setState(182);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(179);
				varDeclaration();
				}
				}
				setState(184);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(185);
			match(T__19);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDeclarationListContext extends ParserRuleContext {
		public List<VarDeclarationSetContext> varDeclarationSet() {
			return getRuleContexts(VarDeclarationSetContext.class);
		}
		public VarDeclarationSetContext varDeclarationSet(int i) {
			return getRuleContext(VarDeclarationSetContext.class,i);
		}
		public VarDeclarationListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDeclarationList; }
	}

	public final VarDeclarationListContext varDeclarationList() throws RecognitionException {
		VarDeclarationListContext _localctx = new VarDeclarationListContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_varDeclarationList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(190);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==VAROPEN) {
				{
				{
				setState(187);
				varDeclarationSet();
				}
				}
				setState(192);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDeclarationSetContext extends ParserRuleContext {
		public TerminalNode VAROPEN() { return getToken(STParser.VAROPEN, 0); }
		public List<TerminalNode> VARKEY() { return getTokens(STParser.VARKEY); }
		public TerminalNode VARKEY(int i) {
			return getToken(STParser.VARKEY, i);
		}
		public List<VarDeclarationContext> varDeclaration() {
			return getRuleContexts(VarDeclarationContext.class);
		}
		public VarDeclarationContext varDeclaration(int i) {
			return getRuleContext(VarDeclarationContext.class,i);
		}
		public VarDeclarationSetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDeclarationSet; }
	}

	public final VarDeclarationSetContext varDeclarationSet() throws RecognitionException {
		VarDeclarationSetContext _localctx = new VarDeclarationSetContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_varDeclarationSet);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(193);
			match(VAROPEN);
			setState(197);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==VARKEY) {
				{
				{
				setState(194);
				match(VARKEY);
				}
				}
				setState(199);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(203);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(200);
				varDeclaration();
				}
				}
				setState(205);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(206);
			match(T__12);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
